<resources>
    <string name="app_name">OMH Auth demo</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="google_login">Google Login</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="microsoft_login">Microsoft Login</string>
    <string name="dropbox_login">Dropbox Login</string>
    <string name="name_placeholder"><b>Name:</b> %s</string>
    <string name="surname_placeholder"><b>Surname:</b> %s</string>
    <string name="email_placeholder"><b>Email:</b> %s</string>
    <string name="token_label">Token:</string>
    <string name="token_placeholder">%s</string>
    <string name="id_token_label">Id Token:</string>
    <string name="id_token_placeholder">%s</string>
    <string name="get_user">Get user</string>
    <string name="refresh">Refresh</string>
    <string name="revoke_token">Revoke token</string>
    <string name="logout">Logout</string>
</resources>